WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282066
Fix a smart pointer warning in SingleTimelineRange::lengthForCSSValue
https://bugs.webkit.org/show_bug.cgi?id=282066
Summary
Fix a smart pointer warning in SingleTimelineRange::lengthForCSSValue
Ryosuke Niwa
Reported
2024-10-24 15:29:12 PDT
Fix the clang static analyzer warning in SingleTimelineRange::lengthForCSSValue.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2024-10-24 15:31:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35693
EWS
Comment 2
2024-10-24 17:10:35 PDT
Committed
285674@main
(d99e05839a17): <
https://commits.webkit.org/285674@main
> Reviewed commits have been landed. Closing PR #35693 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-10-24 17:11:14 PDT
<
rdar://problem/138597631
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug