Fix a smart pointer warning in SingleTimelineRange::lengthForCSSValue https://bugs.webkit.org/show_bug.cgi?id=282066

Reviewed by Tim Nguyen.

Deployed more smart pointer to address a recent regression.

* Source/WebCore/animation/TimelineRange.cpp:
(WebCore::SingleTimelineRange::lengthForCSSValue):

Canonical link: https://commits.webkit.org/285674@main